# mpr

./: Cargo.toml  DEVELOPMENT.md  README.md  build.rs  build_release.bat  mpr.manifest
.github/workflows/: build.yml
src/: main.rs
